# Signal-FTS5-Extension

./: Cargo.toml  README.md  cbindgen.toml
.github/workflows/: ci.yml
benches/: tokenizer.rs
src/: common.rs  extension.rs  lib.rs
